# griffon-IDE

./: AUTHORS  BUGS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  SConstruct  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  griffon.desktop  install-griffon
autocomp/: bash  c  css  html  perl  php
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: bash  doc.html
pixmaps/: griffon_icon.xpm
pixmaps/projects/mimetypes/nuvola-style/: .application-vnd.oasis.opendocument.spreadsheetpng
pixmaps/projects/mimetypes/xfce4-style/: Makefile.am  Makefile.in
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  an.gmo  en.gmo  en.po  fr.gmo  fr.po  griffon.pot  wo.po
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  config.h.in  griffon-bin  griffon_config.c  griffon_config.h  griffon_defs.c  griffon_defs.h  griffon_doc_gen.c  griffon_enc.c  griffon_enc.h  griffon_fr.c  griffon_fr.h  griffon_funx.c  griffon_funx.h  griffon_gtk_utils.c  griffon_gtk_utils.h  griffon_hl.c  griffon_hl.h  griffon_options.c  griffon_options.h  griffon_proj.c  griffon_proj.h  griffon_text_document.c  griffon_text_document.h  help_def.c  help_def.h  interface.c  interface.h  main.c  minido.c  minido.h  rox_strings.c  rox_strings.h
src/.deps/: callbacks.Po  griffon_config.Po  griffon_defs.Po  griffon_doc_gen.Po  griffon_enc.Po  griffon_fr.Po  griffon_funx.Po  griffon_gtk_utils.Po  griffon_hl.Po  griffon_options.Po  griffon_proj.Po  griffon_text_document.Po  help_def.Po  interface.Po  main.Po  minido.Po  rox_strings.Po
theme/: index.theme
theme/Software-Center/: softwarecenter.css
theme/gtk-2.0/: gtkrc  sidebarrc
theme/gtk-3.0/: gnome-applications-dark-overrides.css  gnome-applications.css  gtk-main-dark.css  gtk-main.css  gtk-widgets-backgrounds.css  gtk-widgets-borders.css  gtk-widgets-dark-overrides.css  gtk-widgets.css
theme/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml  metacity-theme-3.xml~
theme/xfce-notify-4.0/: gtkrc
